syntax = "proto3";
package liminalqa.v1;

service IngestService {
  rpc IngestRun(IngestRunRequest) returns (IngestRunResponse);
  rpc IngestTests(IngestTestsRequest) returns (IngestTestsResponse);
  rpc StreamSignals(stream Signal) returns (stream SignalAck);
}

message IngestRunRequest {
  string build_id = 1;
  string plan_name = 2;
  string env = 3;
  int64 started_at = 4; // Unix timestamp ms
  optional int64 ended_at = 5; // Unix timestamp ms
  string runner_version = 6;
  optional string liminal_os_version = 7;
}

message IngestRunResponse {
  string run_id = 1;
}

message IngestTestsRequest {
  string run_id = 1;
  repeated Test tests = 2;
}

message IngestTestsResponse {
  int32 processed_count = 1;
  int32 failed_count = 2;
  repeated string failed_ids = 3;
}

message Test {
  string name = 1;
  string suite = 2;
  string guidance = 3;
  string status = 4; // Pending, Running, Success, Failed, Skipped
  uint64 duration_ms = 5;
  optional string error_message = 6;
  int64 started_at = 7;
  int64 completed_at = 8;
  optional string id = 9; // Optional, might be generated on server if not provided
}

message Signal {
  string run_id = 1;
  string test_id = 2;
  string signal_type = 3;
  int64 timestamp = 4;
  optional uint64 latency_ms = 5;
  map<string, string> metadata = 6;
  optional string payload = 7; // For simple payloads, or refs
}

message SignalAck {
  string signal_id = 1;
  bool success = 2;
  string error = 3;
}
